--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="feature">
         <img src="http://placehold.it/32x32">
-        <h3 class="title">fully responsive</h3>
+        <div class="title">fully responsive</div>
         <div class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eligendi quibusdam sequi.</div>
       </div>
       <div class="feature">
